--- a/Prensadao.Application/Prensadao.Application.csproj
+++ b/Prensadao.Application/Prensadao.Application.csproj
@@ -12,10 +12,10 @@
 
   <ItemGroup>
     <Folder Include="Consumer\" />
-    <Folder Include="Services\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.6" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
   </ItemGroup>
