--- a/Prensadao.Infra/Prensadao.Infra.csproj
+++ b/Prensadao.Infra/Prensadao.Infra.csproj
@@ -10,4 +10,13 @@
     <ProjectReference Include="..\Prensadao.Domain\Prensadao.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Persistence\Migrations\" />
+    <Folder Include="Persistence\Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.7" />
+  </ItemGroup>
+
 </Project>
