add: repositorio, endpoint get; fix: program ter uma camada Service e Repository, ajuste mensagem de erro;

--- a/Prensadao/Prensadao.API.csproj
+++ b/Prensadao/Prensadao.API.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Prensadao.Application\Prensadao.Application.csproj" />
+    <ProjectReference Include="..\Prensadao.Infra\Prensadao.Infra.csproj" />
   </ItemGroup>
 
 </Project>
