--- a/Prensadao/Prensadao.API.csproj
+++ b/Prensadao/Prensadao.API.csproj
@@ -7,11 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.7">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
+	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Prensadao.Application\Prensadao.Application.csproj" />
+
+	  <ProjectReference Include="..\Prensadao.Application\Prensadao.Application.csproj" />
     <ProjectReference Include="..\Prensadao.Infra\Prensadao.Infra.csproj" />
   </ItemGroup>
 
